<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.flavio.currencyconversion.MainActivity">

    <RelativeLayout
        android:layout_width="368dp"
        android:layout_height="503dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="11dp"
            android:text="@string/txtTitle"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="36sp"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/txtDollar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtTitle"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:gravity="center_vertical"
            android:inputType="number"
            android:text="@string/txtDollars"
            android:textColor="@android:color/holo_orange_dark" />

        <TextView
            android:id="@+id/txtTo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtDollar"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/txtTo"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="20sp"
            android:textStyle="bold|italic" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtTo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:id="@+id/radioGroup">

            <RadioButton
                android:id="@+id/radEuro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="@string/radEuro"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/radPeso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="@string/radPeso"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/radCAD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="@string/radCAD"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="20sp" />
        </RadioGroup>

        <Button
            android:id="@+id/btnConvert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/radioGroup"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/btnConvert"
            android:textColor="@android:color/black"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/txtResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnConvert"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="34dp"
            android:textSize="26sp" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
